[package]
name = "soulog"
version = "1.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for polished, clean and colourful console logging and error handling."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
