[package]
name = "soulog"
version = "1.0.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for polished, clean and colourful console logging and error handling."
authors = ["GreenChild04 <greenchild04@protonmail.com>"]
repository = "https://github.com/GreenChild04/soulog"
keywords = [ "logger", "logging", "log", "console" ]
catergories = ["development-tools::debugging"]

[lib]
name = "soulog"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
